// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Message component renders the UI as expected 1`] = `
<div
  className="message"
>
  Messages
  <div
    className="unread_count badge"
  >
    4
  </div>
</div>
`;

exports[`Message component renders the UI as expected with no unreads 1`] = `
<div
  className="message"
>
  Messages
</div>
`;

exports[`renders the UI as expected 1`] = `
<div
  className="message"
>
  Messages
  <div
    className="unread_count badge"
  >
    4
  </div>
</div>
`;

exports[`renders the UI as expected with no unreads 1`] = `
<div
  className="message"
>
  Messages
</div>
`;
